changes in terminology, changes in the installation procedure, or
changes in invocation. 

When the major version is increased, backward-incompatible changes are
made, which are documented in the file 'MIGRATION', and summarized here. 

------------------------------------------------------------------------

XXXXXXXXXX  Version 2.5

* Concatenation is now supported
* The handling of dynamic dependencies was rewritten to allow
  concatenation.  The semantics of existing functionality was not
  changed, except in certain undocumented corner cases.  These include
  transients whose rules contain a command or file targets.  These acted
  transitively previously, but do not now.  Only transient rules without
  command and without file targets act transitively now.  This applies
  to transients used in dynamic dependencies, transients used to import
  variable dependencies, as well as transients used to carry over flags
  to child targets. 
* Arguments to -j cannot be in octal anymore.  In previous versions, the
  -j option accepted numbers in octal when they started with a zero.
  This behavior was accidental, and has been removed. 

2016-09-13  Version 2.4.19

* The rules governing what is written on stdout where reworked:  There
  is now only the -s option (silent).  The options -Q and -w were
  removed. 

2016-09-11  Version 2.4.17

* "Verbose mode" is now called "debug mode", and the option was changed
  from -v to -d.  

2016-09-03  Version 2.4.7

* The -B option is renamed to -i, because it is mainly an interactive
  mode, even if only very rudimentary. 

2016-08-31  Version 2.4.2

* Job control:  Jobs are now always put into the background, except when
  the -B function is used.  The -B function must now be used when Stu
  command should read from their standard input. 

2016-08-31  Version 2.4

* Copy rules can now use the -o flag to denote optional copy rules:

A = -o B;

The semantics are:
- When B is not present:
   - Fail when both A is not present