@@ -1,13 +1,0 @@
-# Error. 
-
-A:  list.list._465
-{
-	cp list.list._456 A
-}
-
-list.${X}_${Y}:  ((((((((((($X))))))(((((($Y))))))
-{
-	cp "$X$Y" list."$X"_"$Y"
-}
-
-list.456 = {456}
