@@ -1,0 +1,11 @@
+A:  list.list._456
+{
+	cp list.list._456 A
+}
+
+list.${X}_${Y}:  ((((((((((($X))))))(((((($Y)))))))))))
+{
+	cp "$X$Y" list."$X"_"$Y"
+}
+
+list.456 = {456}
